syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.example.composetest.data";
option java_outer_classname = "StreamProto";

service SampleService {

    rpc GetClientStream(stream SampleRequest) returns (SampleResponse);
}

message SampleRequest {
    string id = 1;
}

message SampleResponse {
    string message = 1;
}
